fix(tabs): the wrong position of smile curve

--- a/src/packages/__VUE/tabs/index.scss
+++ b/src/packages/__VUE/tabs/index.scss
@@ -67,9 +67,7 @@
           .nut-tabs__titles-item__smile {
             right: -2px;
             bottom: 2px;
-            left: auto;
             width: 3px;
-            transform: rotate(320deg);
             height: $tabs-vertical-titles-item-active-line-height;
           }
         }
